# br-network-performance

./: .gitignore
examples/: build.sh  flash.sh
examples/basic_thread_border_router/: sdkconfig  sdkconfig.defaults  sdkconfig.old
examples/common/thread_border_router/: CMakeLists.txt  Kconfig.projbuild
examples/common/thread_border_router/include/: border_router_launch.h  common.h  experiment.h  experiment_common.h  handler.h  independent_variables.h  leader_weight.h  server.h  sockAddr.h  test.h  time_api.h  trials.h  utilities.h  uuid.h  workload.h
examples/common/thread_border_router/src/: border_router_launch.c  client.c  common.c  handler.c  independent_variables.c  packet_loss.c  print_packet.c  server.c  start_coap_server.c  start_server.c  stats.c  throughput.c  time_api.c  trials.c  txpower.c  workload_cli.c
examples/common/thread_border_router/src/coap/: coap_common.c  observe_client.c  packet_loss.c  packet_loss_observe.c  print_packet.c  request.c  response_callback.c  server.c  throughput.c  throughput_observe.c
examples/common/thread_border_router/src/udp/: packet_loss.c  throughput.c
